--- a/src/UpnoidV3/Views/Home/About.cshtml
+++ b/src/UpnoidV3/Views/Home/About.cshtml
@@ -2,6 +2,5 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p><b>Upnoid</b> is the video rental system that is used in video rental store across SA</p>
