--- a/src/UpnoidV3/Views/Home/Contact.cshtml
+++ b/src/UpnoidV3/Views/Home/Contact.cshtml
@@ -2,16 +2,14 @@
     ViewData["Title"] = "Contact";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
-
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    University way<br />
+    Summerstrand, Port Elizabeth, 6001<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    078 141 8589
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Personal Email:</strong> <a href="okxabisohila@gmail.com">okxabisohila@gmail.com</a><br />
+    <strong>Work Email:</strong> <a href="s213380897@nmmu.ac.za">s213380897@nmmu.ac.za</a>
 </address>
