--- a/src/UpnoidV3/Views/Customers/Index.cshtml
+++ b/src/UpnoidV3/Views/Customers/Index.cshtml
@@ -11,7 +11,7 @@
     <a asp-action="Create" class="btn btn-primary">Create New Customer</a>
 </p>
 }
-<table class="table">
+<table class="table table-bordered table-hover">
     <thead>
         <tr>
             <th>
@@ -30,7 +30,6 @@
             <th>
                 Newsletter?
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
