--- a/src/UpnoidV3/Views/Movies/Index.cshtml
+++ b/src/UpnoidV3/Views/Movies/Index.cshtml
@@ -9,8 +9,9 @@
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New Movie</a>
 </p>
+    <br />
 }
-<table class="table">
+<table class="table table-bordered table-hover">
     <thead>
     <thead>
         <tr>
@@ -34,8 +35,6 @@
             <th>
                 Date Added
             </th>
-           
-            <th></th>
         </tr>
     </thead>
     <tbody>
